# course_work_3

./: README.md  main.py  pyproject.toml
settings/: project_path.py
tests/: conftest.py  test_utils_for_project.py
utils/: utils_for_project.py
